sort.pancake.BurnedPancake.scala.error
Erreur de compilation :
BurnedPancake:13: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (term = false)
                ^